# content-rewriter

./: .gitignore  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-core-models-infrastructure/: 01-CONTEXT.md
docs/superpowers/plans/: 2026-03-30-content-rewriter.md
platform-knowledge/xiaohongshu/: README.md  algorithm.md  banned-words.md  content-formats.md
src/content_rewriter/: __init__.py  cli.py  llm.py  models.py  rewriter.py  style.py  voice.py
src/content_rewriter/adapters/: __init__.py  douyin.py  wechat.py  xiaohongshu.py
tests/: conftest.py  test_cli.py  test_feedback.py  test_llm.py  test_models.py  test_rewriter.py  test_style.py  test_voice.py
tests/fixtures/douyin_sample/: extractor_output.json
tests/test_adapters/: test_douyin.py  test_wechat.py  test_xiaohongshu.py
