[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "content-rewriter"
version = "0.1.0"
description = "Bidirectional platform content transformer with voice profile matching"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.24",
    "rich>=14.0",
    "pydantic>=2.0",
    "anthropic>=0.80",
    "orjson>=3.10",
]

[project.scripts]
content-rewriter = "content_rewriter.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["content_rewriter*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=content_rewriter --cov-report=term-missing"

[tool.ruff]
target-version = "py313"
line-length = 100
